--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,11 +1,11 @@
 
- <div class="row">
+<div class="row">
     <div class="col-md-8">Main Container
-        <div class="about">About me</div>
-        <div class="experience">My Experience</div>
-        <div class="projects">My Projects</div>
+      <app-center-container></app-center-container>
     </div>
+
     <div class="col-md-4">Right Container
-        <div class="skills">My Skills</div>
+      <app-right-container></app-right-container>
     </div>
 </div>
+  
