--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,35 @@
         <div class="col-md-12" style='text-align: center'>
             <div class="row">
                 <div class="col-md-4">Picture</div>
-                <div class="col-md-6">Sanjay Sai</div>
-                <div class="col-md-2">Social links</div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1 class="profile-name">Sanjay Sai</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="list-group portfolio-items">
+                                <li class="list-group-item">Full Stack Developer</li>
+                                <li class="list-group-item">New York, NY</li>
+                            </ul>
+                        
+                        </div>
+                        <div class="col-md-6">
+                                <ul class="list-group portfolio-items">
+                                        <li class="list-group-item">jaysanias@gmail.com</li>
+                                        <li class="list-group-item">347-284-9450</li>
+                                </ul>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">Social links
+                    <ul class="list-group portfolio-items">
+                        <li class="list-group-item"><i class="fab fa-github"></i><span class="social-name">GITHUB</span></li>
+                        <li class="list-group-item"><i class="fab fa-linkedin"></i><span class="social-name">LINKEDIN</span></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
