--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -4,7 +4,7 @@
       <a href="#" class="navbar-brand">Sanjay's Portfolio</a>
     </div>
 
-    <ul class="nav">
+    <ul class="nav mr-auto">
         <li class="nav-item">
           <a class="nav-link active" href="#">Home</a>
         </li>
