--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <div class="container">
   <app-header></app-header>
   <app-main-container></app-main-container>
-
+  <app-footer></app-footer>
 </div>
