header work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nabvar></app-nabvar>
-<div class="container">
+<div class="container-fluid">
   <app-header></app-header>
   <app-main-container></app-main-container>
   <app-footer></app-footer>
