--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,12 @@
 
     <div class="row">
-        <div class="col-md-12" style='text-align: center'>
-            <div class="row">
-                <div class="col-md-4">Picture</div>
-                <div class="col-md-6">
+        <div class="col-md-12 header-background" style='text-align: center'>
+
+            <div class="row header-row">
+                <div class="col-md-3">
+                    <img src="../../assets/img/sanjay.jpg" alt="" class="img-fluid rounded-circle image">
+                </div>
+                <div class="col-md-7">
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="profile-name">Sanjay Sai</h1>
