--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 
     <div class="row">
-        <div class="col-md-12 header-background" style='text-align: center'>
+        <div class="col-md-12 header-background">
 
-            <div class="row header-row">
-                <div class="col-md-3">
+            <div class="row rounded header-row">
+                <div class="col-md-3 text-center">
                     <img src="../../assets/img/sanjay.jpg" alt="" class="img-fluid rounded-circle image">
                 </div>
                 <div class="col-md-7">
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2">Social links
+                <div class="col-md-2">
                     <ul class="list-group portfolio-items">
                         <li class="list-group-item"><i class="fab fa-github"></i><span class="social-name">GITHUB</span></li>
                         <li class="list-group-item"><i class="fab fa-linkedin"></i><span class="social-name">LINKEDIN</span></li>
