--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,6 +1,6 @@
 
-<div class="row">
-    <div class="col-md-8">Main Container
+<div class="row main-container">
+    <div class="col-md-8">
       <app-center-container></app-center-container>
     </div>
 
