work on center container

--- a/src/app/center-container/center-container.component.html
+++ b/src/app/center-container/center-container.component.html
@@ -1,5 +1,52 @@
 
-        <div class="about">About me</div>
-        <div class="experience">My Experience</div>
-        <div class="projects">My Projects</div>
+        <div class="about">
+          <div><h6>ABOUT ME</h6></div> 
+          <div>Highly passionate, imaginative full stack web developer looking to join a great company that
+              believes in innovative solution. With a passion for front-end web development and experience in
+              Ruby on Rails, JavaScript, React/Redux, and CSS, I am ready to contribute for companies in
+              various domains and at the same time, explore and expand my knowledge to achieve
+              professional growth. Driven by my passion, I quit my long held retail job to pursue a web
+              development career and joined Flatiron immersive web application bootcamp which really
+              elevated my interest and passion to whole different level.</div>
+        </div>
+
+        <div class="experience">
+          <div><h6>MY EXPERIENCE</h6></div>
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Dean & Deluca</h2>
+              <h4>Store Manager</h4>
+              <h5>2009 - 2018</h5>
+              <ul class="list-group">Roles and Responsibilities - Highlights
+                <li class="list-group-item">Provided exceptional customer service to clients.</li>
+                <li class="list-group-item">Coached, mentored and motivated new staff members to create productive, respectful and
+                    collaborative work environment.</li>
+                <li class="list-group-item">Frequently helped IT department to setup computer workstation for managers including
+                    installing software, connecting PCs to network, setting up company’s email and other
+                    accounts, troubleshooting computer/network issues with Remote IT team etc.</li>
+                <li class="list-group-item">Helped company build robust relationship with reliables and professional vendors/suppliers
+                    through continuous interaction and meetings.</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+                <h2>Dean & Deluca</h2>
+                <h4>Supervisor</h4>
+                <h5>2004 - 2009</h5>
+                <ul class="list-group">Roles and Responsibilities - Highlights
+                    <li class="list-group-item">Coached, mentored and motivated staff members.</li>
+                    <li class="list-group-item">Helped department reach sales & profit goals as team effort.</li>
+                    <li class="list-group-item">Helped managers create various kind of templates like schedules, action plans, sales
+                        reports etc and shared with other team members.</li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="projects">
+          <div><h6>THINGS I HAVE BUILT</h6></div>
+
+        </div>
+
+
+        
 
