--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -4,7 +4,7 @@
       <app-center-container></app-center-container>
     </div>
 
-    <div class="col-md-4">Right Container
+    <div class="col-md-4">
       <app-right-container></app-right-container>
     </div>
 </div>
