--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -1,1 +1,13 @@
-    <div class="skills">My Skills</div>
+  <div class="row">
+    <div class="col-xs-12 projects">
+      <div><h6>THINGS I HAVE BUILT</h6></div>
+      <img src="" alt="auto schedule" class="img-fluid rounded">
+    </div>
+  </div>
+  
+  <div class="row">
+      <div class="col-xs-12 skills">
+        <div><h6>MY SKILLS</h6></div>
+      </div>
+  </div>
+    
