--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <app-nabvar></app-nabvar>
 <div class="container-fluid">
   <app-header></app-header>
+</div>
+
+<div class="container-fluid">
   <app-main-container></app-main-container>
+</div>
+
+<div class="container-fluid">
   <app-footer></app-footer>
 </div>
