--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12 header-background">
 
-            <div class="row rounded header-row">
+            <div class="row header-row">
                 <div class="col-md-3 text-center">
                     <img src="../../assets/img/sanjay.jpg" alt="" class="img-fluid rounded-circle image">
                 </div>
