right container css

--- a/src/app/center-container/center-container.component.html
+++ b/src/app/center-container/center-container.component.html
@@ -42,9 +42,32 @@
           </div>
         </div>
 
-        <div class="projects">
-          <div><h6>THINGS I HAVE BUILT</h6></div>
-
+        <div class="education">
+          <div><h6>EDUCATION</h6></div>
+          <div class="row">
+            <div class="col-md-6">
+              <h4>Flatiron School</h4>
+              <h3>Full Stack Web development</h3>
+              <h6>10/18 - 02/19</h6>
+              <ul class="list-group">Technologies studied and mastered:
+                <li class="list-group-item">Ruby & Rails</li>
+                <li class="list-group-item">Rails API, Postgres, SQL</li>
+                <li class="list-group-item">Advanced Javascript</li>
+                <li class="list-group-item">React/Redux</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+                <h4>Pokhara College of Technology</h4>
+                <h3>Bachelor of Computer Application</h3>
+                <h6>2000 - 2004</h6>
+                <ul class="list-group">Technologies studied and mastered:
+                  <li class="list-group-item">Programming Fundamentals, Data Structure</li>
+                  <li class="list-group-item">RDBMS, MySQL</li>
+                  <li class="list-group-item">HTML, CSS, Javascript</li>
+                  <li class="list-group-item">C, C++, Visual Basic</li>
+                </ul>
+            </div>
+          </div>
         </div>
 
 
