--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -1,13 +1,54 @@
-  <div class="row">
-    <div class="col-xs-12 projects">
+  <div class="row projects">
+    <div class="col-xs-12">
       <div><h6>THINGS I HAVE BUILT</h6></div>
-      <img src="" alt="auto schedule" class="img-fluid rounded">
+      <div class="project">
+        <img src="../../assets/img/auto-schedule.png" alt="auto schedule" class="img-fluid rounded">
+        <h6 class="text-center">Auto Generate Employee shifts</h6>
+        <p>App that will auto generate weekly shifts for entire employees with a click of a button.</p>
+        <div>
+          <a class="text-center btn btn-primary project-link" href="https://auto-generate-employee-shifts.herokuapp.com/" target='_blank'>WEBSITE</a>
+          <a class="text-center btn btn-primary project-link" href="https://www.youtube.com/watch?v=q6v8HQtlfus&feature=youtu.be" target='_blank'>DEMO</a>
+        </div>
+      </div>
+      
+      <hr/>
+      
+      <div class="project">
+        <img src="../../assets/img/book-conference-room.png" alt="book conf room" class="img-fluid rounded">
+        <h6 class="text-center">Book Conference/Lecture Room</h6>
+        <p>This app is primarily use for scheduling/booking conference room for lectures/events.</p>
+        <div>
+          <a class="text-center btn btn-primary project-link" href="https://book-conference-rooms.herokuapp.com/" target='_blank'>WEBSITE</a>
+          <a class="text-center btn btn-primary project-link" href="https://www.youtube.com/watch?v=7ygbT22pV6c&feature=youtu.be" target='_blank'>DEMO</a>
+        </div>
+      </div>
+
+      <hr/>
+      
+      <div class="project">
+        <img src="../../assets/img/easy-source.png" alt="easy-source" class="img-fluid rounded">
+        <h6 class="text-center">Easy Source </h6>
+        <p>This app was built to bring wholesalers and buyers together. Wholesalers can upload products they are offering</p>
+        <div>
+          <a class="text-center btn btn-primary project-link" style="display:inline-block" href="https://easy-source.herokuapp.com/" target='_blank'>WEBSITE</a>
+          <a class="text-center btn btn-primary project-link" href="https://www.youtube.com/watch?v=x1uVlIx_1HQ&feature=youtu.be" target='_blank'>DEMO</a>
+        </div>
+      </div>
     </div>
   </div>
   
-  <div class="row">
-      <div class="col-xs-12 skills">
-        <div><h6>MY SKILLS</h6></div>
+  <div class="row skills">
+      <div class="col-xs-12">
+        <div>
+          <h6>MY SKILLS</h6>
+          <img src="../../assets/img/logos/angular.png" alt="angular" class="img-fluid rounded-circle logo" width="60px" height="60px">
+          <img src="../../assets/img/logos/rails.png" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
+          <img src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="100px" height="100px">
+          <img src="../../assets/img/logos/js.png" alt="js" class="img-fluid rounded-circle logo" width="60px" height="60px">
+          <img src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="60px" height="60px">
+          <img src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="60px" height="60px">
+          <img src="../../assets/img/logos/html.jpeg" alt="html" class="img-fluid rounded-circle logo" width="80px" height="80px">
+        </div>
       </div>
   </div>
     
