--- a/src/app/right-container/right-container.component.css
+++ b/src/app/right-container/right-container.component.css
@@ -1,3 +1,18 @@
-.row{
+.projects{
     margin-bottom: 20px;
+    background-color: lightblue;
+    padding:10px;
+}
+
+.project{
+    margin-bottom: 20px;
+}
+
+
+.project-link{
+    margin-left: 5px;
+}
+
+.skills{
+    background-color: white;
 }
