--- a/src/app/center-container/center-container.component.html
+++ b/src/app/center-container/center-container.component.html
@@ -1,7 +1,7 @@
 
         <div class="about">
-          <div><h6>ABOUT ME</h6></div> 
-          <div>Highly passionate, imaginative full stack web developer looking to join a great company that
+          <div class="about-heading"><h6>ABOUT ME</h6></div> 
+          <div class="about-detail">Highly passionate, imaginative full stack web developer looking to join a great company that
               believes in innovative solution. With a passion for front-end web development and experience in
               Ruby on Rails, JavaScript, React/Redux, and CSS, I am ready to contribute for companies in
               various domains and at the same time, explore and expand my knowledge to achieve
@@ -11,8 +11,8 @@
         </div>
 
         <div class="experience">
-          <div><h6>MY EXPERIENCE</h6></div>
-          <div class="row">
+          <div class="experience-heading"><h6>MY EXPERIENCE</h6></div>
+          <div class="row experience-detail">
             <div class="col-md-6">
               <h2>Dean & Deluca</h2>
               <h4>Store Manager</h4>
@@ -43,8 +43,8 @@
         </div>
 
         <div class="education">
-          <div><h6>EDUCATION</h6></div>
-          <div class="row">
+          <div class="education-heading"><h6>EDUCATION</h6></div>
+          <div class="row education-detail">
             <div class="col-md-6">
               <h4>Flatiron School</h4>
               <h3>Full Stack Web development</h3>
