--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -37,18 +37,22 @@
     </div>
   </div>
   
-  <div class="row skills">
+  <div class="row skill-heading">
       <div class="col-xs-12">
-        <div>
-          <h6>MY SKILLS</h6>
-          <img src="../../assets/img/logos/angular.png" alt="angular" class="img-fluid rounded-circle logo" width="60px" height="60px">
-          <img src="../../assets/img/logos/rails.png" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
-          <img src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="100px" height="100px">
-          <img src="../../assets/img/logos/js.png" alt="js" class="img-fluid rounded-circle logo" width="60px" height="60px">
-          <img src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="60px" height="60px">
-          <img src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="60px" height="60px">
-          <img src="../../assets/img/logos/html.jpeg" alt="html" class="img-fluid rounded-circle logo" width="80px" height="80px">
-        </div>
+          MY SKILLS
       </div>
   </div>
-    
+
+  <div class="row skill-body">
+    <div class="col-xs-12">
+      <img src="../../assets/img/logos/angular.png" alt="angular" class="img-fluid rounded-circle logo" width="60px" height="60px">
+      <img src="../../assets/img/logos/rails.png" alt="rails" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <img src="../../assets/img/logos/ruby.jpeg" alt="ruby" class="img-fluid rounded-circle logo" width="100px" height="100px">
+      <img src="../../assets/img/logos/js.png" alt="js" class="img-fluid rounded-circle logo" width="60px" height="60px">
+      <img src="../../assets/img/logos/react.png" alt="react" class="img-fluid rounded-circle logo" width="60px" height="60px">
+      <img src="../../assets/img/logos/redux.png" alt="redux" class="img-fluid rounded-circle logo" width="60px" height="60px">
+      <img src="../../assets/img/logos/html.jpeg" alt="html" class="img-fluid rounded-circle logo" width="80px" height="80px">
+    </div>
+  </div>
+        
+  
