--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 
-    <div class="row">
+    <div class="row" style="margin-top:75px">
         <div class="col-md-12 header-background">
 
             <div class="row header-row">
