--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="#" class="navbar-brand">Sanjay's Portfolio</a>
