--- a/src/app/center-container/center-container.component.html
+++ b/src/app/center-container/center-container.component.html
@@ -13,10 +13,11 @@
         <div class="experience">
           <div class="experience-heading"><h6>MY EXPERIENCE</h6></div>
           <div class="row experience-detail">
-            <div class="col-md-6">
+            <div class="col-md-6 col-exp">
               <h2>Dean & Deluca</h2>
               <h4>Store Manager</h4>
               <h5>2009 - 2018</h5>
+              <hr/>
               <ul class="list-group">Roles and Responsibilities - Highlights
                 <li class="list-group-item">Provided exceptional customer service to clients.</li>
                 <li class="list-group-item">Coached, mentored and motivated new staff members to create productive, respectful and
@@ -32,6 +33,7 @@
                 <h2>Dean & Deluca</h2>
                 <h4>Supervisor</h4>
                 <h5>2004 - 2009</h5>
+                <hr/>
                 <ul class="list-group">Roles and Responsibilities - Highlights
                     <li class="list-group-item">Coached, mentored and motivated staff members.</li>
                     <li class="list-group-item">Helped department reach sales & profit goals as team effort.</li>
@@ -45,10 +47,11 @@
         <div class="education">
           <div class="education-heading"><h6>EDUCATION</h6></div>
           <div class="row education-detail">
-            <div class="col-md-6">
+            <div class="col-md-6 col-edu">
               <h4>Flatiron School</h4>
               <h3>Full Stack Web development</h3>
               <h6>10/18 - 02/19</h6>
+              <hr/>
               <ul class="list-group">Technologies studied and mastered:
                 <li class="list-group-item">Ruby & Rails</li>
                 <li class="list-group-item">Rails API, Postgres, SQL</li>
@@ -60,6 +63,7 @@
                 <h4>Pokhara College of Technology</h4>
                 <h3>Bachelor of Computer Application</h3>
                 <h6>2000 - 2004</h6>
+                <hr/>
                 <ul class="list-group">Technologies studied and mastered:
                   <li class="list-group-item">Programming Fundamentals, Data Structure</li>
                   <li class="list-group-item">RDBMS, MySQL</li>
