--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,6 +33,7 @@
                     <ul class="list-group portfolio-items">
                         <li class="list-group-item"><i class="fab fa-github"></i><span class="social-name">GITHUB</span></li>
                         <li class="list-group-item"><i class="fab fa-linkedin"></i><span class="social-name">LINKEDIN</span></li>
+                        <li class="list-group-item"><i class="fab fa-medium"></i><span class="social-name">MEDIUM</span></li>
                     </ul>
                 </div>
             </div>
