--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -1,6 +1,6 @@
   <div class="row projects">
     <div class="col-xs-12">
-      <div><h6>THINGS I HAVE BUILT</h6></div>
+      <div class="project-heading"><h6>THINGS I HAVE BUILT</h6></div>
       <div class="project">
         <img src="../../assets/img/auto-schedule.png" alt="auto schedule" class="img-fluid rounded">
         <h6 class="text-center">Auto Generate Employee shifts</h6>
