--- a/src/app/center-container/center-container.component.html
+++ b/src/app/center-container/center-container.component.html
@@ -13,7 +13,8 @@
         <div class="experience">
           <div class="experience-heading"><h6>MY EXPERIENCE</h6></div>
           <div class="row experience-detail">
-            <div class="col-md-6 col-exp">
+            <div class="col-md-6 pr-md-1 col-exp">
+              <div>
               <h2>Dean & Deluca</h2>
               <h4>Store Manager</h4>
               <h5>2009 - 2018</h5>
@@ -28,8 +29,10 @@
                 <li class="list-group-item">Helped company build robust relationship with reliables and professional vendors/suppliers
                     through continuous interaction and meetings.</li>
               </ul>
+              </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 pl-md-1">
+              <div>
                 <h2>Dean & Deluca</h2>
                 <h4>Supervisor</h4>
                 <h5>2004 - 2009</h5>
@@ -40,6 +43,7 @@
                     <li class="list-group-item">Helped managers create various kind of templates like schedules, action plans, sales
                         reports etc and shared with other team members.</li>
                   </ul>
+              </div>
             </div>
           </div>
         </div>
