--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,9 +31,23 @@
                 </div>
                 <div class="col-md-2">
                     <ul class="list-group portfolio-items">
-                        <li class="list-group-item"><i class="fab fa-github"></i><span class="social-name">GITHUB</span></li>
-                        <li class="list-group-item"><i class="fab fa-linkedin"></i><span class="social-name">LINKEDIN</span></li>
-                        <li class="list-group-item"><i class="fab fa-medium"></i><span class="social-name">MEDIUM</span></li>
+                        <li class="list-group-item">
+                            <a href="https://github.com/shachsan" target="_blank"><i class="fab fa-github"></i>
+                                <span class="social-name">GITHUB</span>
+                            </a>
+                        </li>
+
+                        <li class="list-group-item">
+                            <a href="https://www.linkedin.com/in/sanjay-sai/" target="_blank"><i class="fab fa-linkedin"></i>
+                                <span class="social-name">LINKEDIN</span>
+                            </a>
+                        </li>
+
+                        <li class="list-group-item">
+                            <a href="https://medium.com/@shachsan" target="_blank"><i class="fab fa-medium"></i>
+                                <span class="social-name">MEDIUM</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
