--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -2,6 +2,7 @@
 <div class="row main-container">
     <div class="col-md-8">
       <app-center-container></app-center-container>
+      <!-- <app-blog></app-blog> -->
     </div>
 
     <div class="col-md-4">
