--- a/src/app/nabvar/nabvar.component.html
+++ b/src/app/nabvar/nabvar.component.html
@@ -6,7 +6,7 @@
 
     <ul class="nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="#" (click)="onNavLinkClickHandler('home')">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Experience</a>
@@ -15,7 +15,7 @@
           <a class="nav-link" href="#">Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Skills</a>
+          <a class="nav-link" href="#" (click)="onNavLinkClickHandler('blog')">Blogs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Education</a>
