--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,9 @@
 body{
     background: linear-gradient(rgba(238, 241, 243, 0.6), rgba(227, 233, 220, 0.7)), url('./assets/img/bg-img.jpg'), no-repeat;
 }
+
+@media (max-width:670px){
+    .header-background{
+        padding-top: 75px;
+    }
+}
