--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<app-nabvar></app-nabvar>
+<app-nabvar (navLinkSelected)="onNavigate($event)"></app-nabvar>
 <div class="container-fluid">
   <app-header></app-header>
 </div>
 
 <div class="container-fluid">
-  <app-main-container></app-main-container>
+  <app-main-container *ngIf="navLinkSelected==='home'"></app-main-container>
+  <app-blog *ngIf="navLinkSelected==='blog'"></app-blog>
 </div>
 
 <div class="container-fluid">
