--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -18,6 +18,32 @@
     margin-left: 10px;
 }
 
+.portfolio-items a{
+    position: relative;
+    /* margin-bottom: 10px; */
+    /* padding: 0; */
+}
+
+.portfolio-items a::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    max-width: 100px;
+    height: 3px;
+    left: 0;
+    bottom: 0;
+    background-color: gold;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-out;
+}
+
+.portfolio-items a:hover:before{
+    visibility: visible;
+    left: 0;
+    transform: scaleX(1);
+}
+
 .image{
     width: 200px;
     height: 230px;
@@ -39,4 +65,14 @@
 .list-group-item{
     background-color: transparent;
     border: none;
+}
+
+.list-group-item a{
+    text-decoration: none;
+    color: black;
+    padding-bottom: 5px;
+}
+
+.list-group-item a:hover{
+    color: slateblue;
 }
