--- a/src/app/right-container/right-container.component.css
+++ b/src/app/right-container/right-container.component.css
@@ -1,5 +1,5 @@
 .projects{
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     background-color: lightblue;
     padding:10px;
 }
@@ -19,7 +19,8 @@
 }
 
 .project-link{
-    margin-left: 5px;
+    margin-left: 10px;
+    margin-right: 15px;
 }
 
 .skill-body{
