--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -7,10 +7,8 @@
         <p>App that will auto generate weekly shifts for entire employees with a click of a button.</p>
         <div class="text-center">
           <a class="btn btn-primary project-link" href="https://auto-generate-employee-shifts.herokuapp.com/" target='_blank'>WEBSITE</a>
-          <a class="btn btn-primary project-link" 
-              href="https://www.youtube.com/watch?v=q6v8HQtlfus&feature=youtu.be"
-              target='_blank'
-              (click)="onClickDemo()">DEMO</a>
+          <a class="btn btn-primary project-link" href="#"
+              (click)="onClickDemo('auto-shift')">DEMO</a>
         </div>
       </div>
       
