--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,12 +1,13 @@
 
 <div class="row main-container">
     <div class="col-md-8">
-      <app-center-container></app-center-container>
+      <app-center-container *ngIf="playDemo===''"></app-center-container>
+      <app-demo *ngIf="playDemo==='auto-shift'"></app-demo>
       <!-- <app-blog></app-blog> -->
     </div>
 
     <div class="col-md-4">
-      <app-right-container></app-right-container>
+      <app-right-container (playDemo)="onPlayDemo($event)"></app-right-container>
     </div>
 </div>
   
