--- a/src/app/right-container/right-container.component.html
+++ b/src/app/right-container/right-container.component.html
@@ -20,7 +20,9 @@
         <p>This app is primarily use for scheduling/booking conference room for lectures/events.</p>
         <div class="text-center">
           <a class="btn btn-primary project-link" href="https://book-conference-rooms.herokuapp.com/" target='_blank'>WEBSITE</a>
-          <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=7ygbT22pV6c&feature=youtu.be" target='_blank'>DEMO</a>
+          <a class="btn btn-primary project-link" href="#"
+              (click)="onClickDemo('book-conf')">DEMO</a>
+          <!-- <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=7ygbT22pV6c&feature=youtu.be" target='_blank'>DEMO</a> -->
         </div>
       </div>
 
@@ -32,7 +34,9 @@
         <p>This app was built to bring wholesalers and buyers together. Wholesalers can upload products they are offering</p>
         <div class="text-center">
           <a class="btn btn-primary project-link" style="display:inline-block" href="https://easy-source.herokuapp.com/" target='_blank'>WEBSITE</a>
-          <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=x1uVlIx_1HQ&feature=youtu.be" target='_blank'>DEMO</a>
+          <a class="btn btn-primary project-link" href="#"
+              (click)="onClickDemo('easy-source')">DEMO</a>
+          <!-- <a class="btn btn-primary project-link" href="https://www.youtube.com/watch?v=x1uVlIx_1HQ&feature=youtu.be" target='_blank'>DEMO</a> -->
         </div>
       </div>
     </div>
