--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-md-12">
-      <iframe width="100%" height="450" src="https://www.youtube.com/embed/q6v8HQtlfus?rel=0&modestbranding=1&autohide=1&showinfo=0&autoplay=1"
+      <iframe width="100%" height="450" [src]="getUrlForDemo()"
       frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen></iframe>
 
